--- a/src/assets/style/_tailwind.scss
+++ b/src/assets/style/_tailwind.scss
@@ -17,7 +17,7 @@
         @apply font-Kayak;
     }
     h4 {
-        @apply font-ClashDisplay font-semibold 
+        @apply font-ClashDisplay font-bold text-[20px] leading-[1.4]
     }
     h5 {
         @apply font-semibold text-[20px] leading-[1.4]
@@ -87,6 +87,6 @@
 }
 ////  links style 
 a {
-    @apply inline-flex text-[#222] font-medium no-underline
+    @apply inline-flex gap-2 text-[#222] font-medium no-underline
 } 
 
